--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             <label for="period">Período:</label>
             <select id="period" name="period" required>
                 <option value="">Selecione seu período</option>
-                <option value="manha">Manhã</option>
-                <option value="tarde">Tarde</option> 
-                <option value="noite">Noite</option>
+                <option value="manha">MANHÃ</option>
+                <option value="tarde">TARDE</option> 
+                <option value="noite">NOITE</option>
             </select>
 
             <label for="classGroup">Turma:</label>
             <select id="classGroup" name="classGroup" required>
                 <option value="">Selecione sua turma</option>
-                <option value="INF">INF</option>
+                <option value="INF">INFORMATICA</option>
             </select>
 
             <button type="submit" disabled="TRUE">Entrar</button> 
